docs/0.17/_sources/api/gammapy.modeling.models.BackgroundModel.rst.txt
BackgroundModel
===============

.. currentmodule:: gammapy.modeling.models

.. autoclass:: BackgroundModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~BackgroundModel.covariance
      ~BackgroundModel.default_parameters
      ~BackgroundModel.energy_center
      ~BackgroundModel.evaluation_radius
      ~BackgroundModel.name
      ~BackgroundModel.norm
      ~BackgroundModel.parameters
      ~BackgroundModel.position
      ~BackgroundModel.reference
      ~BackgroundModel.tag
      ~BackgroundModel.tilt

   .. rubric:: Methods Summary

   .. autosummary::

      ~BackgroundModel.copy
      ~BackgroundModel.create
      ~BackgroundModel.cutout
      ~BackgroundModel.evaluate
      ~BackgroundModel.from_dict
      ~BackgroundModel.from_parameters
      ~BackgroundModel.stack
      ~BackgroundModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: energy_center
   .. autoattribute:: evaluation_radius
   .. autoattribute:: name
   .. autoattribute:: norm
   .. autoattribute:: parameters
   .. autoattribute:: position
   .. autoattribute:: reference
   .. autoattribute:: tag
   .. autoattribute:: tilt

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: create
   .. automethod:: cutout
   .. automethod:: evaluate
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: stack
   .. automethod:: to_dict
